engine/crates/parser-sdl/src/rules/relations/snapshots/parser_sdl__rules__relations__relations_engine__tests__one_to_many_relation_bidirectional_1.snap
---
source: crates/parser-sdl/src/rules/relations/relations_engine.rs
expression: "&ctx.relations"
---
{
    "AuthorToPost": MetaRelation {
        name: "AuthorToPost",
        kind: ManyToOne,
        relation: (
            Some(
                ModelName(
                    "Author",
                ),
            ),
            ModelName(
                "Post",
            ),
        ),
        birectional: true,
    },
}
